stromligning/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stromligning
  labels:
    app.kubernetes.io/name: stromligning
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: stromligning
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: stromligning
    spec:
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
        runAsUser: 1000
      containers:
      - name: stromligning
        image: ghcr.io/rwx-labs/stromligning:edge
        securityContext:
          capabilities:
            drop:
            - ALL
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
          limits:
            cpu: 100m
            memory: 64Mi
        livenessProbe:
          httpGet:
            path: /livez
            port: 3000
          initialDelaySeconds: 2
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /readyz
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 5
